Add removal to DISABLED_WARNINGS Fail at startup if bad value specified to option